WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228286
WebXRSession::m_visibilityState is uninitialized
https://bugs.webkit.org/show_bug.cgi?id=228286
Summary
WebXRSession::m_visibilityState is uninitialized
Ada Chan
Reported
2021-07-26 11:10:23 PDT
WebXRSession::m_visibilityState is uninitialized. It should be initialized to XRVisibilityState::VISIBLE.
Attachments
Patch
(611 bytes, patch)
2021-07-26 11:12 PDT
,
Ada Chan
sam
: review-
Details
Formatted Diff
Diff
Patch
(1.24 KB, patch)
2021-07-26 11:24 PDT
,
Ada Chan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2021-07-26 11:12:35 PDT
Created
attachment 434217
[details]
Patch
Sam Weinig
Comment 2
2021-07-26 11:15:31 PDT
Comment on
attachment 434217
[details]
Patch Change looks fine, but you are going to need a ChangeLog.
Ada Chan
Comment 3
2021-07-26 11:24:21 PDT
Created
attachment 434219
[details]
Patch
EWS
Comment 4
2021-07-26 12:22:52 PDT
Committed
r280307
(
239957@main
): <
https://commits.webkit.org/239957@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434219
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-07-26 12:24:32 PDT
<
rdar://problem/81124067
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug