[WebXR] WebXRSession::m_visibilityState is uninitialized https://bugs.webkit.org/show_bug.cgi?id=228286

Patch by Ada Chan <ada.chan@apple.com> on 2021-07-26
Reviewed by Tim Horton.

WebXRSession::m_visibilityState should be initialized to XRVisibilityState::Visible.

* Modules/webxr/WebXRSession.h:

Canonical link: https://commits.webkit.org/239957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280307 268f45cc-cd09-0410-ab3c-d52691b4dbfc